refactor + setup day 6